# PAE-HP

./: README.md
Example algorithms/: ExampleAlgorithms.txt
Test/src/: main  main.cpp
Test/src/main.dSYM/Contents/Resources/DWARF/: main
Test/src/main.dSYM/Contents/Resources/Relocations/x86_64/: main.yml
downsample_pkg/: CMakeLists.txt  package.xml
downsample_pkg/src/: example1.cpp  example1_to_rosbag.cpp  icp_downsample_prova.cpp
icp_test/: CMakeLists.txt  package.xml
icp_test/src/: icp_algorithm.cpp  icp_algorithm_v2.cpp  icp_algorithm_v6.cpp
noise_removal/: CMakeLists.txt  package.xml
noise_removal/src/: noise_removal_algorithm.cpp
pcl_filter/: CMakeLists.txt
point_cloud_tailor/: CMakeLists.txt  README.md  package.xml
point_cloud_tailor/2D_map/: 2D_map  2D_map.cpp
point_cloud_tailor/launch/: alignment.launch
point_cloud_tailor/results/: aligned_cloud.pcd  aligned_cloud_ceiling.pcd
point_cloud_tailor/rviz/: rviz_config.rviz
point_cloud_tailor/src/: alignment.cpp  trajectory.cpp
resources/: README.md  example_algorithms.txt
rosbags/: README.md
tests/: README.md
tests/Matlab/: alignement_main.m  downsampling_function.m  filter_radius.m  generateSphere.m  pcd_read.m  test.m
tests/Matlab/Tests/: Copy_of_pcd_read.m  downsampling_func.m  pcd_read.m  readPCDs.m  test4.asv  test4.m  test5.m  version0.m
tests/PCDs/: downsampling_func.m  test2.m
tests/alignement/: CMakeLists.txt  package.xml
tests/alignement/src/: algorithms.txt  icp_algorithm_v3.cpp  icp_algorithm_v5.cpp  icp_algorithm_v7.cpp
tests/alignment/: CMakeLists.txt  package.xml
tests/alignment/src/: algorithms.txt  algorithms_metrics.txt  icp_algorithm_exp.cpp  icp_algorithm_test.cpp  icp_algorithm_v1-0.cpp  icp_algorithm_v1-1.cpp  icp_algorithm_v10-1.cpp  icp_algorithm_v10.cpp  icp_algorithm_v12-2.cpp  icp_algorithm_v12.cpp  icp_algorithm_v13.cpp  icp_algorithm_v14.cpp  icp_algorithm_v3.cpp  icp_algorithm_v5.cpp  icp_algorithm_v7.cpp
tests/downsampling/: CMakeLists.txt  package.xml
tests/downsampling/src/: downsample_prova_algorithm.cpp
tests/noise_removal/: CMakeLists.txt  package.xml
tests/pcl_filter/: CMakeLists.txt
tests/pcl_filter/src/: example1.cpp  example2.cpp
tests/segmentation/: CMakeLists.txt  package.xml
tests/segmentation/src/: segmentation_algorithm.cpp
