<?xml version="1.0"?>
<package format="2">
  <name>icp_test</name>
  <version>1.0.0</version>
  <description>The icp_test package implements the ICP algorithm in a simple way</description>

  <maintainer email="oriol.torres.pla@estudiantat.upc.edu">oriol torres pla</maintainer>
  <license>TODO</license>
  <author email="oriol.torres.pla@estudiantat.upc.edu">oriol torres pla</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_export_depend>pcl_conversions</build_export_depend>
  <build_export_depend>pcl_ros</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <export>
  </export>
</package>
