<?xml version="1.0"?>
<package format="2">
  <name>point_cloud_tailor</name>
  <version>1.0.0</version>
  
 <description>
 	Final program for aligning consecutive point clouds using 
 	techniques such as feature extraction and downsampling, 
 	among others, to achieve a low computational cost.
 	
 	Universitat Politecnica de Catalunya (UPC-ETSETB) and Hewlett-Packard (HP).
 </description>

  <maintainer email="oriol.torres.pla@estudiantat.upc.edu">Oriol Torres Pla</maintainer>
  
  <license>TODO</license>
  
  <author email="albert.tomas.ruiz@estudiantat.upc.edu">Albert Tomas Ruiz</author>
  <author email="saida.li.sillo@estudiantat.upc.edu">Saida Li Sillo Perez</author>
  <author email="oriol.torres.pla@estudiantat.upc.edu">Oriol Torres Pla</author>
  <author email="adrian.lopez.pardina@estudiantat.upc.edu">Adrian Lopez Pardina</author>
  <author email="ismael.bouzarhoun@estudiantat.upc.edu">Ismael Bouzarhoun El Haddad</author>
  <author email="aleix.gaya@estudiantat.upc.edu">Aleix Gaya Sarri</author>
  <author email="aleix.teruel@estudiantat.upc.edu">Aleix Teruel Menendez</author>
  <author email="gerard.carreras.mallol@estudiantat.upc.edu">Gerard Carreras Mallol</author>
  <author email="josep.cobos@estudiantat.upc.edu">Josep Cobos Brunet</author>
  <author email="tobias.christopher.nick@estudiantat.upc.edu">Tobias Christopher Nick</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  
  <build_export_depend>pcl_conversions</build_export_depend>
  <build_export_depend>pcl_ros</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  
  <exec_depend>libpcl-common</exec_depend>
  <exec_depend>libpcl-filters</exec_depend>
  <exec_depend>libpcl-io</exec_depend>
  <exec_depend>libpcl-segmentation</exec_depend>

  <export>
  </export>
  
</package>
