<?xml version="1.0"?>
<package format="2">
  <name>noise_removal</name>
  <version>1.0.0</version>
  <description>Removal of noise and outlier points</description>

  <maintainer email="albert.tomas.ruiz@estudiantat.upc.edu">Albert Tomas Ruiz</maintainer>
  <license>TODO</license>
  <author email="albert.tomas.ruiz@estudiantat.upc.edu">Albert Tomas Ruiz</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  
  <build_export_depend>pcl_conversions</build_export_depend>
  <build_export_depend>pcl_ros</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  
  <export>
  </export>
  
</package>
