<?xml version="1.0"?>
<package format="2">
  <name>segmentation</name>
  <version>1.0.0</version>
  <description>Segmentation of point clouds into distinct semantic parts</description>

  <maintainer email="ismael.bouzarhoun@estudiantat.upc.edu">Ismael Bouzarhoun El Haddad</maintainer>
  <license>TODO</license>
  <author email="aismael.bouzarhoun@estudiantat.upc.edu">Ismael Bouzarhoun El Haddad</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  
  <build_export_depend>pcl_conversions</build_export_depend>
  <build_export_depend>pcl_ros</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf</exec_depend>

  <export>
  </export>
  
</package>
